# fwforge

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.md  data.txt  layout.yaml  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_license.py
src/fwforge/: cli.py  fw_parser.py  writer.py
src/fwforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_parser.py
vscode-extension/: .vscodeignore  LICENSE  README.md  extension.js  fixedwidth-forge-0.1.1.vsix  fixedwidth-forge-1.1.1.vsix  package.json
