[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fwforge"
version = "0.1.0"
description = "Fixed-width file parser for legacy logistics & supply chain data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
fwforge = "fwforge.cli:main"

[tool.setuptools]
packages = ["fwforge"]
[tool.setuptools.package-dir]
"" = "src"
